# lowest-common-ancestor-localstack

./: .flake8  Makefile  README.md  docker-compose.yml  local.tf  mypy.ini  program.py  pyproject.toml  test_program.py  wait_for_localstack
