[tool.poetry]
name = "lowest-common-ancestor-localstack"
version = "0.0.3"
description = "In a symmetric binary tree"
authors = ["Gustaw Fit <gustaw.fit@gmail.com>"]
packages = [
    { include = "*" },]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
mypy = "^0.812"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
isort = "^5.8.0"
flake8-isort = "^4.0.0"

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.virtualenvs
)/
'''

[tool.pytest.ini_options]
markers = [
    "unittest: Unit tests",
]

[tool.poetry.scripts]
execute = "program:execute"
